--- a/src/components/userProfile/GlobalNavigationBar.module.scss
+++ b/src/components/userProfile/GlobalNavigationBar.module.scss
@@ -1,64 +1,64 @@
 .container {
-    display: flex;
+  display: flex;
 }
 
 .LeftSideBar {
-    width: 60px;
-    height: 100vh;
-    background-color: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8px 8px;
-    border-right: 1px solid #F2F5F8;
+  width: 60px;
+  height: 100vh;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px 8px;
+  border-right: 1px solid #f2f5f8;
 }
 
 .iconContainer {
-    width: 32px;
-    height: 32px;
-    margin: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 6px;
+  width: 32px;
+  height: 32px;
+  margin: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
 }
 
-.logoIconContainer{
-    width: 32px;
-    height: 32px;
-    background-color: #00BD57;
-    margin-bottom: 12px;
-    border-radius: 6px;
-    position: relative;
+.logoIconContainer {
+  width: 32px;
+  height: 32px;
+  background-color: #00bd57;
+  margin-bottom: 12px;
+  border-radius: 6px;
+  position: relative;
 }
 
 .logoIconContainer::after {
-    content: "";
-    position: absolute;
-    bottom: -12px; /* 아이콘 아래로 10px 떨어진 곳에 border 추가 */
-    left: 0;
-    width: 100%;
-    border-bottom: 1px solid #F2F5F8;
+  content: '';
+  position: absolute;
+  bottom: -12px; /* 아이콘 아래로 10px 떨어진 곳에 border 추가 */
+  left: 0;
+  width: 100%;
+  border-bottom: 1px solid #f2f5f8;
 }
 
-.userIconContainer{
-    background-color: #F2F5F8;
+.userIconContainer {
+  background-color: #f2f5f8;
 }
 
 .icon {
-    color: #fff;
-    font-size: 24px;
+  color: #fff;
+  font-size: 24px;
 }
 
 .link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .main {
-    flex-grow: 1;
-    padding: 16px;
+  flex-grow: 1;
+  padding: 16px;
 }
 
 .bottomIconContainer {
-    margin-top: auto;
+  margin-top: auto;
 }
