--- a/src/components/timeLine/headerNavigation/HeaderNavigation.module.scss
+++ b/src/components/timeLine/headerNavigation/HeaderNavigation.module.scss
@@ -8,8 +8,8 @@ $background: #fff;
 .headerNav {
   display: flex;
   width: 100%;
-  height: 3rem;
-  padding: 0.5rem 54.25rem 0.5rem 0.25rem;
+  height: 72px;
+  padding: 12px 1344px 12px 8px;
   align-items: center;
   background-color: $background;
   border-bottom: 1px solid #f2f5f8;
@@ -18,9 +18,9 @@ $background: #fff;
 .backbtn,
 .forwardbtn {
   background-color: $background;
-  width: 2rem;
-  height: 2rem;
-  padding: 0.5rem;
+  width: 48px;
+  height: 48px;
+  padding: 12px;
 
   justify-content: center;
   align-items: center;
