--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -88,6 +88,8 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
+  font-family: 'Freesentation', Arial, sans-serif;
+  font-weight: 400;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -129,6 +131,8 @@ table {
 
 * {
   box-sizing: border-box;
+  font-family: 'Freesentation', Arial, sans-serif;
+  font-weight: 400;
 }
 
 @font-face {
@@ -150,11 +154,25 @@ table {
   font-style: normal;
 }
 
-body {
-  font-family: 'Freesentation', Arial, sans-serif;
-  font-weight: 400;
-}
 input {
-  font-family: 'Freesentation';
   outline: none;
+}
+button {
+  border: none;
+  background: none;
+}
+button:hover {
+  cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+p,
+input {
+  line-height: 150%;
 }
