--- a/src/pages/Welcome/Welcome.module.scss
+++ b/src/pages/Welcome/Welcome.module.scss
@@ -23,8 +23,34 @@
   height: 100%;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 40px;
+}
+
+.welcomeContainer {
+  align-items: center;
+  text-align: center;
+  gap: 12px;
+}
+.logo {
+  width: 44px;
+  height: 44px;
+}
+.welcome__textContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+
+  h3 {
+    font-size: 22px;
+    font-weight: 600;
+  }
+  h4 {
+    font-size: 20px;
+  }
 }
 
 .titleContainer {
@@ -39,14 +65,12 @@
   transform: translate(-50%, -50%);
 
   h1 {
-    font-size: 4.5rem;
+    font-size: 72px;
     font-weight: 700;
-    line-height: 150%;
   }
 
   h2 {
-    font-size: 1.75rem;
+    font-size: 28px;
     font-weight: 400;
-    line-height: 150%;
   }
 }
