--- a/src/components/timeLine/editorList/EditorList.module.scss
+++ b/src/components/timeLine/editorList/EditorList.module.scss
@@ -1,6 +1,58 @@
-// .list {
-//   width: 100%;
-//   height: 20.5rem;
+@font-face {
+  font-family: 'Freesentation-SemiBold';
+  src: url('../../../assets/fonts/Freesentation-SemiBold.woff') format('woff');
+  font-weight: normal;
+  font-size: normal;
 
-//   // background-color: bisque;
-// }
+  @font-face {
+    font-family: 'Freesentation-Regular';
+    src: url('../../../assets/fonts/Freesentation-Regular.woff') format('woff');
+    font-weight: normal;
+    font-size: normal;
+  }
+}
+
+.titleBar {
+  padding-bottom: 19px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  font-family: 'Freesentation-SemiBold', sans-serif;
+  font-size: 20px;
+  font-weight: 600px;
+  line-height: 30px;
+}
+
+.refreshBtn {
+  display: flex;
+  width: 70px;
+  height: 40px;
+  padding: 7px 8px 6px 8px;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+
+  background-color: transparent; 
+  border: none;
+
+  cursor: pointer;
+}
+
+.refreshBtnContent {
+  width: 54px;
+  height: 27px;
+  
+  font-family: 'Freesentation-Regular', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  color: #767d86;
+  white-space: nowrap;
+}
+
+//.editorProfile {
+//
+//}
