--- a/src/components/timeLine/headerNavigation/HeaderNavigation.module.scss
+++ b/src/components/timeLine/headerNavigation/HeaderNavigation.module.scss
@@ -28,8 +28,8 @@ $background: #fff;
   border: none;
 
   img {
-    width: 1rem;
-    height: 1rem;
+    width: 24px;
+    height: 24px;
     flex-shrink: 0;
   }
 }
