--- a/src/components/timeLine/leftBar/LeftBar.module.scss
+++ b/src/components/timeLine/leftBar/LeftBar.module.scss
@@ -1,6 +1,6 @@
 .leftBar {
-  width: 18.5rem;
-  height: 45rem;
+  width: 400px;
+  height: 100%;
   flex-shrink: 0;
 
   display: flex;
@@ -10,20 +10,28 @@
 }
 
 .border {
-  width: 17rem;
-  height: 0.0625rem;
+  width: 360px;
+  height: 1px;
 
   background: #f2f5f8;
 }
 
 .editorList {
   width: 100%;
-  height: 20.5rem;
+  height: 410px;
+  padding: 57px 20px 24px 20px;
 
-  // background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
 
 .keywordList {
   width: 100%;
   flex-grow: 1;
+  padding: 24px 20px 392px 20px;
+
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
