--- a/src/components/timeLine/keywordList/KeywordList.module.scss
+++ b/src/components/timeLine/keywordList/KeywordList.module.scss
@@ -20,7 +20,7 @@
 }
 
 .title {
-  font-family: 'Freesentation-SemiBold', sans-serif;
+  font-family: 'Freesentation-SemiBold';
   font-size: 20px;
   font-weight: 600px;
   line-height: 30px;
@@ -45,10 +45,49 @@
   width: 54px;
   height: 27px;
   
-  font-family: 'Freesentation-Regular', sans-serif;
+  font-family: 'Freesentation-Regular';
   font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
   color: #767d86;
   white-space: nowrap;
+}
+
+.keywords {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.selected {
+  display: flex;
+  padding: 6px 16px;
+  align-items: center;
+  margin-right: 12px;
+  margin-bottom: 12px;
+
+  border-radius: 4px;
+  background-color: #D3F7E3;
+
+  color: #00BD57;
+  font-family: 'Freesentation-Regular';
+}
+
+.keywordPills {
+  display: flex;
+  padding: 6px 16px;
+  align-items: center;
+  margin-right: 12px;
+  margin-bottom: 12px;
+
+  border-radius: 4px;
+  background-color: #F2F5F8;
+
+  color: #111;
+  font-family: 'Freesentation-Regular';
+}
+
+.alertComment {
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  color: #767D86;
+  font-family: 'Freesentation-Regular';
 }
