--- a/src/components/timeLine/leftBar/LeftBar.module.scss
+++ b/src/components/timeLine/leftBar/LeftBar.module.scss
@@ -5,6 +5,7 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   border-right: 1px solid #f2f5f8;
 }
@@ -18,8 +19,8 @@
 
 .editorList {
   width: 100%;
-  height: 410px;
-  padding: 57px 20px 24px 20px;
+  height: 482px;
+  padding: 57px 12px 24px 20px;
 
   display: flex;
   flex-direction: column;
@@ -29,7 +30,7 @@
 .keywordList {
   width: 100%;
   flex-grow: 1;
-  padding: 24px 20px 392px 20px;
+  padding: 24px 12px 392px 20px;
 
   display: flex;
   flex-direction: column;
