--- a/src/components/timeLine/editorList/EditorList.module.scss
+++ b/src/components/timeLine/editorList/EditorList.module.scss
@@ -1,17 +1,3 @@
-@font-face {
-  font-family: 'Freesentation-SemiBold';
-  src: url('../../../assets/fonts/Freesentation-SemiBold.woff') format('woff');
-  font-weight: normal;
-  font-size: normal;
-
-  @font-face {
-    font-family: 'Freesentation-Regular';
-    src: url('../../../assets/fonts/Freesentation-Regular.woff') format('woff');
-    font-weight: normal;
-    font-size: normal;
-  }
-}
-
 .titleBar {
   padding-bottom: 19px;
   display: flex;
@@ -20,9 +6,8 @@
 }
 
 .title {
-  font-family: 'Freesentation-SemiBold', sans-serif;
   font-size: 20px;
-  font-weight: 600px;
+  font-weight: 600;
   line-height: 30px;
 }
 
@@ -33,7 +18,10 @@
   padding: 7px 8px 6px 8px;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
+  flex-shrink: 0;
+
+  font-size: 18px;
+  color: #767d86;
 
   background-color: transparent;
   border: none;
@@ -41,9 +29,8 @@
   cursor: pointer;
 }
 
-.refreshBtnContent {
-  font-family: 'Freesentation-Regular', sans-serif;
-  font-size: 18px;
-  color: #767d86;
-  white-space: nowrap;
+.editorProfiles {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
 }
