--- a/src/components/timeLine/editorList/EditorProfileCard.module.scss
+++ b/src/components/timeLine/editorList/EditorProfileCard.module.scss
@@ -1,30 +1,18 @@
-@font-face {
-  font-family: 'Freesentation-SemiBold';
-  src: url('../../../assets/fonts/Freesentation-SemiBold.woff') format('woff');
-  font-weight: 400;
-  font-size: 16px;
-}
-
-@font-face {
-  font-family: 'Freesentation-Regular';
-  src: url('../../../assets/fonts/Freesentation-Regular.woff') format('woff');
-  font-weight: normal;
-  font-size: 14px;
-}
 
 .cardRoot {
   display: flex;
   width: 360px;
   height: 60px;
-  margin-bottom: 12px;
-  justify-content: space-between;
   position: relative;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .editorInfo {
   display: flex;
   align-items: center;
   gap: 12px;
+  justify-content: center;
 }
 
 .editorImg {
@@ -44,31 +32,31 @@
 }
 
 .editorName {
-  font-family: 'Freesentation-SemiBold', sans-serif;
+  font-weight: 600;
 }
 
 .editorId {
-  font-family: 'Freesentation-Regular', sans-serif;
   color: #A3ABB3;
 }
 
 
 .following {
   display: flex;
-  width: 56px;
-  height: 25px;
   padding: 2px 12px;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
   background-color: #D3F7E3;
   border: none;
+  font-size: 14px;
+  font-weight: 600;
   color:#00BD57;
 }
 
 .AuthContainer {
   position: fixed;
   z-index: 1100;
-  margin-top: 240px;
-  margin-left: 745px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
