fix(ProfileInfoSetting): 랜딩 페이지 로그인 후 timeline으로 navigate

--- a/src/pages/TimeLine/TimeLine.module.scss
+++ b/src/pages/TimeLine/TimeLine.module.scss
@@ -1,4 +1,19 @@
+.timeLineContainer {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+
 .leftBarWrapper {
   display: flex;
   flex-direction: row;
+}
+
+.authContainer {
+  position: absolute;
+  z-index: 1100;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
