--- a/src/components/timeLine/editorList/EditorProfileCard.module.scss
+++ b/src/components/timeLine/editorList/EditorProfileCard.module.scss
@@ -1,4 +1,3 @@
-
 .cardRoot {
   display: flex;
   width: 360px;
@@ -22,7 +21,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 90.795px;
-  border: 0.908px solid #EBEEF2;
+  border: 0.908px solid #ebeef2;
 }
 
 .editorNameNid {
@@ -36,9 +35,8 @@
 }
 
 .editorId {
-  color: #A3ABB3;
+  color: #a3abb3;
 }
-
 
 .following {
   display: flex;
@@ -46,18 +44,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  background-color: #D3F7E3;
+  background-color: #d3f7e3;
   border: none;
   font-size: 14px;
   font-weight: 600;
   line-height: 150%;
-  color:#00BD57;
-}
-
-.AuthContainer {
-  position: fixed;
-  z-index: 1100;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  color: #00bd57;
 }
