--- a/src/components/timeLine/keywordList/KeywordList.module.scss
+++ b/src/components/timeLine/keywordList/KeywordList.module.scss
@@ -23,7 +23,7 @@
   font-size: 18px;
   color: #767d86;
 
-  background-color: transparent; 
+  background-color: transparent;
   border: none;
 
   cursor: pointer;
@@ -42,12 +42,12 @@
   margin-bottom: 12px;
 
   border-radius: 4px;
-  background-color: #D3F7E3;
+  background-color: #d3f7e3;
 
-  color: #00BD57;
+  color: #00bd57;
   font-weight: 600;
   line-height: 150%;
-  }
+}
 
 .keywordPills {
   display: flex;
@@ -57,7 +57,7 @@
   margin-bottom: 12px;
 
   border-radius: 4px;
-  background-color: #F2F5F8;
+  background-color: #f2f5f8;
 
   color: #111;
   font-weight: 600;
@@ -68,7 +68,7 @@
   display: inline-flex;
   align-items: center;
   gap: 4px;
-  color: #767D86;
+  color: #767d86;
   font-size: 14px;
   line-height: 150%;
 }
