--- a/src/components/timeLine/editorList/EditorList.module.scss
+++ b/src/components/timeLine/editorList/EditorList.module.scss
@@ -21,7 +21,7 @@
   flex-shrink: 0;
 
   font-size: 18px;
-  color: #767d86;
+  color: ar(--gray_500);
 
   background-color: transparent;
   border: none;
