--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,6 +2,30 @@
   v2.0 | 20110126
   License: none (public domain)
 */
+:root {
+  --main : #00BD57;
+  --sub : #CCF2DD;
+  --error : #FF4B12;
+  --hover : #00A84D;
+  --edit_red : #FF4B12;
+  --edit_yellow : #FFA011;
+  --edit_blue : #0085FF;
+  --edit_purple : #821FFF;
+  --white : #FFFFFF;
+  --gray_25 : #FBFCFD;
+  --gray_50 : #F2F5F8;
+  --gray_100 : #EBEEF2;
+  --gray_150 : #DCE2E7;
+  --gray_200 : #CED3DA;
+  --gray_300 : #B7C0C9;
+  --gray_400 : #A3ABB3;
+  --gray_500 : #767D86;
+  --gray_600 : #4B535A;
+  --gray_700 : #3A4149;
+  --gray_800 : #2C2F34;
+  --gray_900 : #232629;
+  --black : #111111;
+}
 html,
 body,
 div,
