--- a/src/components/profile_setting/ProfileSettingModal.module.scss
+++ b/src/components/profile_setting/ProfileSettingModal.module.scss
@@ -14,7 +14,7 @@
   height: 529px;
   border-radius: 6px;
   padding: 16px;
-  background: #fff;
+  background: var(--white);
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -23,7 +23,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #f2f5f8;
+  border-bottom: 1px solid var(--gray_50);
 }
 
 .infoContainer {
