feat: GetUser file created

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,28 +3,28 @@
   License: none (public domain)
 */
 :root {
-  --main : #00BD57;
-  --sub : #CCF2DD;
-  --error : #FF4B12;
-  --hover : #00A84D;
-  --edit_red : #FF4B12;
-  --edit_yellow : #FFA011;
-  --edit_blue : #0085FF;
-  --edit_purple : #821FFF;
-  --white : #FFFFFF;
-  --gray_25 : #FBFCFD;
-  --gray_50 : #F2F5F8;
-  --gray_100 : #EBEEF2;
-  --gray_150 : #DCE2E7;
-  --gray_200 : #CED3DA;
-  --gray_300 : #B7C0C9;
-  --gray_400 : #A3ABB3;
-  --gray_500 : #767D86;
-  --gray_600 : #4B535A;
-  --gray_700 : #3A4149;
-  --gray_800 : #2C2F34;
-  --gray_900 : #232629;
-  --black : #111111;
+  --main: #00bd57;
+  --sub: #ccf2dd;
+  --error: #ff4b12;
+  --hover: #00a84d;
+  --edit_red: #ff4b12;
+  --edit_yellow: #ffa011;
+  --edit_blue: #0085ff;
+  --edit_purple: #821fff;
+  --white: #ffffff;
+  --gray_25: #fbfcfd;
+  --gray_50: #f2f5f8;
+  --gray_100: #ebeef2;
+  --gray_150: #dce2e7;
+  --gray_200: #ced3da;
+  --gray_300: #b7c0c9;
+  --gray_400: #a3abb3;
+  --gray_500: #767d86;
+  --gray_600: #4b535a;
+  --gray_700: #3a4149;
+  --gray_800: #2c2f34;
+  --gray_900: #232629;
+  --black: #111111;
 }
 html,
 body,
