--- a/src/components/timeLine/mapList/MapCard.module.scss
+++ b/src/components/timeLine/mapList/MapCard.module.scss
@@ -96,7 +96,6 @@
   position: relative;
 }
 
-
 .editorImg img {
   position: absolute; /* Allow images to overlap each other */
   width: 43.582px;
@@ -116,7 +115,8 @@
   z-index: 1;
 }
 
-.forward, .backward {
+.forward,
+.backward {
   display: flex;
   width: 48px;
   height: 48px;
