--- a/src/components/userProfile/GetUser.module.scss
+++ b/src/components/userProfile/GetUser.module.scss
@@ -65,15 +65,6 @@
   margin-left: 20px;
 }
 
-.searchInput {
-  display: flex;
-  width: 1508px;
-  align-items: center;
-  justify-content: flex-start;
-  color: var(--gray_400);
-  background-color: var(--gray_50);
-}
-
 .contentView {
   display: flex;
   align-items: center;
@@ -95,11 +86,11 @@
   font-size: 16px;
 }
 
-.mapContainaer {
+.mapContainer {
   display: flex;
   flex-direction: column;
+  width: 100%;
   gap: 16px;
-  margin-left: 372px;
   max-height: 600px;
   overflow-y: auto;
 }
@@ -127,6 +118,46 @@
   height: 327px;
   margin: 8px;
   background-color: var(--gray_400);
+}
+
+.listInfo {
+  display: flex;
+  width: 100%;
+  height: 21px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  font-size: 14px;
+  color: var(--gray_500);
+}
+
+.mapInfo {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  margin-left: 637px;
+  justify-content: space-between;
+}
+
+.listContainer {
+  display: flex;
+  width: 100%;
+  margin-left: 20px;
+  flex-direction: column;
+}
+
+.mapList {
+  display: flex;
+  width: 100%;
+  height: 102px;
+}
+
+.mapListInfo {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  margin-left: 637px;
+  justify-content: space-between;
 }
 
 .link {
