--- a/src/pages/Explore/Explore.module.scss
+++ b/src/pages/Explore/Explore.module.scss
@@ -45,3 +45,12 @@
   margin-top: 20px;
   margin-bottom: 24px;
 }
+
+.main{
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-right: 12px;
+  gap: 28px;
+}
+
