--- a/src/components/timeLine/mapList/MapCard.module.scss
+++ b/src/components/timeLine/mapList/MapCard.module.scss
@@ -7,7 +7,6 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 24px;
-  gap: 36px;
 
   overflow: hidden;
   max-width: 100%;
@@ -78,12 +77,6 @@
   line-height: 150%;
 }
 
-// .editorImg {
-//   position: relative;
-//   width: fit-content;
-//   height: fit-content;
-// }
-
 .editorImg {
   display: flex;
   width: 48px;
@@ -97,7 +90,7 @@
 }
 
 .editorImg img {
-  position: absolute; /* Allow images to overlap each other */
+  position: absolute;
   width: 43.582px;
   height: 49.029px;
   border-radius: 50%;
@@ -125,4 +118,8 @@
   align-items: center;
   flex-shrink: 0;
   cursor: pointer;
+}
+
+.hidden {
+  visibility: hidden;
 }
