--- a/src/pages/TimeLine/TimeLine.module.scss
+++ b/src/pages/TimeLine/TimeLine.module.scss
@@ -1,4 +1,5 @@
 .timeLineContainer {
+  display: flex;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -17,3 +18,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 100%;
+}
+
+
