style: import 코드 위치 변경

--- a/src/components/map/MapInfoPanel/MapInfoPanel.module.scss
+++ b/src/components/map/MapInfoPanel/MapInfoPanel.module.scss
@@ -1,5 +1,6 @@
 #mapInfoPanel {
-  margin-left: 72px;
+  position: fixed;
+  left: 72px;
   height: 100vh;
   width: 300px;
   background: var(--white);
