--- a/src/components/map/MapInfoPanel/MapInfoInputContainer.module.scss
+++ b/src/components/map/MapInfoPanel/MapInfoInputContainer.module.scss
@@ -29,14 +29,13 @@
   font-size: 14px;
   overflow: hidden;
   width: 100%;
-  line-height: 150%;
   field-sizing: content;
 }
 #mapDescription:focus {
   outline: none;
 }
-input::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder {
+#mapTitle::-webkit-input-placeholder,
+#mapDescription::-webkit-input-placeholder {
   color: var(--gray_400);
 }
 
