--- a/src/components/explore/MapList.module.scss
+++ b/src/components/explore/MapList.module.scss
@@ -13,7 +13,6 @@
 
   border-radius: 6px;
   border: 1px solid#EBEEF2;
-
 }
 
 .mapImg {
@@ -116,4 +115,24 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 150%;
+}
+
+.selected {
+  display: flex;
+  padding: 6px 16px;
+  align-items: center;
+
+  border-radius: 4px;
+  background: #d3f7e3;
+
+  color: #00bd57;
+
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 150%;
+}
+
+.keywordContainer {
+  width: 904px;
+  height: 159px;
 }
