fix(mapInfoStore): 지도의 공개 주소 필수 지정

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -201,3 +201,9 @@ input,
 textarea {
   line-height: 150%;
 }
+
+span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
