--- a/src/components/map/MapInfoPanel/MapInfoPanel.module.scss
+++ b/src/components/map/MapInfoPanel/MapInfoPanel.module.scss
@@ -5,6 +5,7 @@
   width: 300px;
   background: var(--white);
   box-shadow: 0px 0px 8px 0px rgba(118, 125, 134, 0.2);
+  z-index: 2;
 }
 
 .header {
