--- a/src/components/explore/ErrorPage.module.scss
+++ b/src/components/explore/ErrorPage.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
 
-  color: #767D86;
+  color: #767d86;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
