--- a/src/components/userProfile/UserInfoBar.module.scss
+++ b/src/components/userProfile/UserInfoBar.module.scss
@@ -100,3 +100,16 @@
   justify-content: center;
   text-align: center;
 }
+
+.authContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
