--- a/src/components/global/GlobalNavigationBar.module.scss
+++ b/src/components/global/GlobalNavigationBar.module.scss
@@ -65,3 +65,16 @@
 .bottomIconContainer {
   margin-top: auto;
 }
+
+.authContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
