--- a/src/components/userProfile/getNewMap/NewMap.module.scss
+++ b/src/components/userProfile/getNewMap/NewMap.module.scss
@@ -21,6 +21,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .modalTop {
@@ -35,23 +36,128 @@
   margin-bottom: 8px;
 }
 
-.searchBar {
+.mapTitleText {
+  display: flex;
+  width: 52px;
+  height: 24px;
+  margin-left: 4px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.mapTitle {
   display: flex;
   width: 380px;
   height: 48px;
   border-radius: 8px;
   background-color: var(--gray_50);
   align-items: center;
+  padding-left: 12px;
 }
 
-.searchBarText {
+.mapTitleInput {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
   justify-content: center;
   align-items: center;
   gap: 8px;
-  margin-left: 12px;
   font-size: 18px;
   font-weight: 400;
+  outline: none;
+}
+
+.emptyInput {
+  color: var(--gray_400); 
+}
+
+.filledInput {
+  color: var(--black); 
+}
+
+.mapStartText{
+  display: flex;
+  width: 52px;
+  height: 24px;
+  margin-left: 4px;
+  margin-top: 16px;
+  margin-bottom: 8px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.btnLocation {
+  display: flex;
+  justify-content: space-between;
+  width: 380px;
+  height: 48px;
+  border-radius: 8px;
+  background-color: var(--gray_50);
+  align-items: center;
+  padding: 0 4px;
+}
+
+.btnLocation button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 118px;
+  height: 40px; 
+  border-radius: 4px; 
+  cursor: pointer; 
+  position: relative;
+}
+
+.btnLocation button:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  right: -5px; /* 요소 사이에 여백을 만들어 선이 중앙에 오도록 */
+  height: 36px; /* 선의 높이 지정 */
+  width: 1px; /* 선의 두께 지정 */
+  background-color: var(--gray_100); /* 선의 색상 설정 */
+}
+
+.defaultButton {
+  background-color: var(--gray_50);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
   color: var(--gray_400);
+}
+
+.selectedButton {
+  background-color: var(--sub);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--main);
+}
+
+.createBtn {
+  background-color: var(--gray_100);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 48px;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: auto;
+}
+
+.onMapCreate {
+  background-color: var(--main);
+}
+
+.offMapCreate {
+  background-color: var(--gray_200);
 }
