feat: 유저프로필 팔로워 팔로잉 클릭 커서 변경

--- a/src/components/userProfile/EmptyUser.module.scss
+++ b/src/components/userProfile/EmptyUser.module.scss
@@ -72,6 +72,7 @@
   justify-content: space-evenly;
   margin-left: 16px;
   border: 1px solid var(--gray_50);
+  border-radius: 8px;
 }
 
 .newMap {
