--- a/src/components/userProfile/UserInfoBar.module.scss
+++ b/src/components/userProfile/UserInfoBar.module.scss
@@ -73,6 +73,7 @@
   justify-content: space-around;
   gap: 10px;
   align-items: center;
+  cursor: pointer;
 }
 
 .UserProfilBox {
@@ -99,6 +100,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  cursor: pointer;
 }
 
 .authContainer {
