--- a/src/components/userProfile/GetUser.module.scss
+++ b/src/components/userProfile/GetUser.module.scss
@@ -26,8 +26,8 @@
 }
 
 .square {
-  width: 48px; /* 정사각형의 너비 */
-  height: 48px; /* 정사각형의 높이 */
+  width: 48px; 
+  height: 48px; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,8 +38,32 @@
   margin-left: 28px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: row;
   padding: 10px;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 33px;
+  color: var(--black);
+  gap: 12px;
+  cursor: pointer;
+}
+
+.dropdown {
+  top: 100%;
+  width: 100%;
+  max-height: 150px; 
+  background-color: white;
+  border: 1px solid var(--gray_400);
+  border-radius: 4px;
+  z-index: 1000; 
+}
+
+.dropdownItem {
+  padding: 10px;
+  cursor: pointer;
+  &:hover {
+    background-color: var(--gray_100); /* 마우스 오버 시 배경색 변경 */
+  }
 }
 
 .middleBar {
@@ -55,14 +79,33 @@
   width: 1250px;
   align-items: center;
   justify-content: flex-start;
-  color: var(--gray_400);
   background-color: var(--gray_50);
 }
 
 .search {
   display: flex;
+  width: 100%;
+  height: 100%;
   align-items: center;
   margin-left: 20px;
+}
+
+.searchInput {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  margin-left: 8px;
+  color: black;
+
+  &::placeholder {
+    color: var(--gray_400); 
+  }
 }
 
 .contentView {
@@ -72,6 +115,30 @@
   justify-content: space-evenly;
   margin-left: 16px;
   border: 1px solid var(--gray_50);
+  border-radius: 8px;
+}
+
+.iconButton {
+  background-color: var(--white); // 기본 배경색
+  border: none;
+  cursor: pointer;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 8px; // 버튼을 정사각형으로 만들기 위해 적용
+
+  svg {
+    width: 24px;
+    height: 24px;
+    fill: var(--gray_500); // 기본 SVG 색상
+  }
+}
+
+.activeView {
+  background-color: var(--gray_50);
 }
 
 .newMap {
