feat: registerStore 토큰 재발급 구문 추가

--- a/src/components/userProfile/userInfoBarCard/GetUserInfoBar.module.scss
+++ b/src/components/userProfile/userInfoBarCard/GetUserInfoBar.module.scss
@@ -1,16 +1,16 @@
 @font-face {
   font-family: Freesentation;
-  src: url('../../assets/fonts/Freesentation-Bold.woff');
+  src: url('../../../assets/fonts/Freesentation-Bold.woff');
 }
 
 @font-face {
   font-family: Freesentation;
-  src: url('../../assets/fonts/Freesentation-Regular.woff');
+  src: url('../../../assets/fonts/Freesentation-Regular.woff');
 }
 
 @font-face {
   font-family: Freesentation;
-  src: url('../../assets/fonts/Freesentation-SemiBold.woff');
+  src: url('../../../assets/fonts/Freesentation-SemiBold.woff');
 }
 
 .UserInfoBar {
