--- a/src/components/explore/MapList.module.scss
+++ b/src/components/explore/MapList.module.scss
@@ -33,8 +33,13 @@
 }
 
 .editorImg {
+  display: flex;
   width: 60px;
   height: 60px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 90.795px;
+  border: 0.908px solid var(--gray_100);
 }
 
 .editorInfo {
