--- a/src/components/timeLine/Dimmed.module.scss
+++ b/src/components/timeLine/Dimmed.module.scss
@@ -2,8 +2,16 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
+}
+
+.authContainer {
+  position: fixed;
+  z-index: 1100;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
