--- a/src/components/timeLine/editorList/EditorProfileCard.module.scss
+++ b/src/components/timeLine/editorList/EditorProfileCard.module.scss
@@ -51,3 +51,17 @@
   line-height: 150%;
   color: var(--main);
 }
+
+.unfollowing {
+  display: flex;
+  padding: 2px 12px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background-color: #f2f5f8;
+  border: none;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 150%;
+  color: var(--main);
+}
