--- a/src/components/timeLine/mapCard/MapCard.module.scss
+++ b/src/components/timeLine/mapCard/MapCard.module.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 1408px;
-  height: auto;
+  height: 393px;
 
   margin-bottom: 36px;
 
-  // overflow: hidden;
+  // overflow-x: hidden;
   max-width: 100%;
 }
 
@@ -25,6 +25,7 @@
   gap: 16px;
   margin-top: 16px;
   flex-wrap: nowrap;
+  overflow: hidden;
 }
 
 .map {
