--- a/src/pages/Explore/Explore.module.scss
+++ b/src/pages/Explore/Explore.module.scss
@@ -1,18 +1,28 @@
 .root {
   display: flex;
+  width: 100vw;
+  height: 100vh;
+  // overflow-y: hidden;
+  // overflow-x: hidden;
 }
 
-.authContainer {
-  position: absolute;
-  z-index: 1100;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+// .authContainer {
+//   position: absolute;
+//   z-index: 1100;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+// }
 
 .leftBarWrapper {
   display: flex;
   flex-direction: row;
+}
+
+.pageMain {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .btnTitle {
@@ -56,4 +66,6 @@
   padding-left: 20px;
   padding-right: 12px;
   gap: 28px;
+  width: 100vw;
+  height: 100vh;
 }
