--- a/src/pages/TimeLine/TimeLine.module.scss
+++ b/src/pages/TimeLine/TimeLine.module.scss
@@ -1,9 +1,10 @@
 .timeLineContainer {
   display: flex;
-  width: 1920px;
-  height: 1080px;
+  width: 100vw;
+  height: 100vh;
 
   position: relative;
+  overflow-x: hidden;
 }
 
 .main {
