--- a/src/components/userProfile/followModal/Following.module.scss
+++ b/src/components/userProfile/followModal/Following.module.scss
@@ -56,6 +56,24 @@
   color: var(--gray_400);
 }
 
+.searchInput {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  margin-left: 2px;
+  color: black;
+
+  &::placeholder {
+    color: var(--gray_400);
+  }
+}
+
 .userList {
   width: 380px;
   overflow-y: auto;
