Feat. 탐색 페이지 무한스크롤 구현

--- a/src/components/explore/MapList.module.scss
+++ b/src/components/explore/MapList.module.scss
@@ -1,8 +1,10 @@
 .MapListRoot {
   display: flex;
+  flex-direction: row;
   gap: 12px;
   width: 1408px;
   height: 288px;
+  margin-bottom: 28px;
 }
 
 .Images {
