--- a/src/pages/Explore/Explore.module.scss
+++ b/src/pages/Explore/Explore.module.scss
@@ -2,17 +2,9 @@
   display: flex;
   width: 100vw;
   height: 100vh;
-  // overflow-y: hidden;
-  // overflow-x: hidden;
+  overflow: hidden;
+  position: relative;
 }
-
-// .authContainer {
-//   position: absolute;
-//   z-index: 1100;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-// }
 
 .leftBarWrapper {
   display: flex;
@@ -23,6 +15,16 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  height: 100%;
+
+}
+
+.mapMain {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  flex: 1;
 }
 
 .btnTitle {
@@ -60,12 +62,29 @@
   margin-bottom: 24px;
 }
 
+.map {
+  height: auto;
+  padding-bottom: 80px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
   padding-left: 20px;
   padding-right: 12px;
+
+  flex:1;
+  overflow-y: auto;
+  overflow-x: hidden;
   gap: 28px;
-  width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 80px);
+
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 206px;
+  }
+  &::-webkit-scrollbar-thumb {
+    width: 4px;
+    background-color: #ebeef2;
+  }
 }
