--- a/src/pages/TimeLine/TimeLine.module.scss
+++ b/src/pages/TimeLine/TimeLine.module.scss
@@ -4,21 +4,13 @@
   height: 100vh;
 
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .main {
   display: flex;
   flex-direction: row;
   width: calc(100vw - 72px);
-}
-
-.authContainer {
-  position: absolute;
-  z-index: 1100;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .TimelineMain {
@@ -36,14 +28,12 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 24px;
-  // height: calc(100vh - 72px);
   overflow-y: auto;
   overflow-x: hidden;
 
   &::-webkit-scrollbar {
     width: 8px;
     height: 206px;
-    // background-color: transparent;
   }
   &::-webkit-scrollbar-thumb {
     width: 4px;
