feat. 탐색 페이지 지도 내 키워드 검색하기

--- a/src/components/explore/MapList.module.scss
+++ b/src/components/explore/MapList.module.scss
@@ -68,7 +68,8 @@
 .mapInfo {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 16px;
+  justify-content: space-between;
 }
 
 .mapContent {
