--- a/src/components/explore/ErrorPage.module.scss
+++ b/src/components/explore/ErrorPage.module.scss
@@ -1,15 +1,17 @@
 .errorPageRoot {
-  width: 1382px;
-  height: 855px;
+  width: 100%;
+  height: calc(100vh - 181px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center; /* 텍스트를 중앙 정렬 */
+}
 
+.text {
   color: #767d86;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
-  text-align: center;
 }
