--- a/src/components/global/GlobalNavigationBar.module.scss
+++ b/src/components/global/GlobalNavigationBar.module.scss
@@ -84,3 +84,9 @@
 .iconContainer_off {
   background-color: var(--white);
 }
+
+.iconContainer img {
+  width: 24px;
+  height: 24px;
+  border-radius: 150px;
+}
