--- a/src/components/userProfile/EmptyUser.module.scss
+++ b/src/components/userProfile/EmptyUser.module.scss
@@ -38,8 +38,14 @@
   margin-left: 28px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: row;
   padding: 10px;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 33px;
+  color: var(--black);
+  gap: 12px;
+  cursor: pointer;
 }
 
 .middleBar {
