feat: UserPage 페이지 명 닉네임 연동

--- a/src/components/userProfile/userInfoBarCard/GetUserInfoBar.module.scss
+++ b/src/components/userProfile/userInfoBarCard/GetUserInfoBar.module.scss
@@ -13,6 +13,20 @@
   src: url('../../../assets/fonts/Freesentation-SemiBold.woff');
 }
 
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+
 .UserInfoBar {
   width: 300px;
   background-color: var(--white);
