--- a/src/components/map/MapInfoPanel/MapBasicInfo/MapBasicInfoContainer/MapBasicInfoContainer.module.scss
+++ b/src/components/map/MapInfoPanel/MapBasicInfo/MapBasicInfoContainer/MapBasicInfoContainer.module.scss
@@ -8,3 +8,65 @@
   padding: 16px;
   border-bottom: 1px solid var(--gray_50);
 }
+
+.mapInfoInputContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid var(--gray_50);
+}
+
+.titleContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#mapTitle {
+  width: calc(100% - 24px);
+  border: none;
+  font-size: 20px;
+  font-weight: 600;
+}
+#mapTitle:disabled,
+#mapDescription:disabled {
+  background: none;
+}
+
+#mapDescription {
+  border: none;
+  resize: none;
+  font-size: 14px;
+  overflow: hidden;
+  width: 100%;
+  field-sizing: content;
+}
+#mapDescription:focus {
+  outline: none;
+}
+#mapTitle::-webkit-input-placeholder,
+#mapDescription::-webkit-input-placeholder {
+  color: var(--gray_400);
+}
+
+.bookmarkBtn:hover {
+  cursor: pointer;
+}
+
+.locationInfoContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.locationInfo {
+  display: flex;
+  justify-content: space-between;
+  span {
+    font-size: 14px;
+  }
+}
+.location__title {
+  color: var(--gray_400);
+}
