--- a/src/components/userProfile/followModal/Follower.module.scss
+++ b/src/components/userProfile/followModal/Follower.module.scss
@@ -104,6 +104,19 @@
   gap: 6px;
 }
 
+.userInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 6px;
+  text-decoration: none;
+  color: inherit;
+}
+
+.userInfo:hover {
+  text-decoration: none; /* 호버 시에도 밑줄 제거 */
+}
+
 .userProfilePic {
   width: 40px;
   height: 40px;
