refactor(UserType): modify imgUrl to imageUrl

--- a/src/components/map/MapInfoPanel/ObjectOutlineList/ObjectOutlineBtn.module.scss
+++ b/src/components/map/MapInfoPanel/ObjectOutlineList/ObjectOutlineBtn.module.scss
@@ -13,3 +13,11 @@
     background: var(--gray_25);
   }
 }
+
+.selectedObjectOutlineBtn {
+  background: var(--gray_50);
+
+  &:hover {
+    background: var(--gray_50);
+  }
+}
