--- a/src/components/map/ObjectInfoPanel/ObjectBasicInfo/ObjectBasicInfoContainer.module.scss
+++ b/src/components/map/ObjectInfoPanel/ObjectBasicInfo/ObjectBasicInfoContainer.module.scss
@@ -22,3 +22,8 @@
   width: 190px;
   font-size: 14px;
 }
+
+.disabledBasicInfoContainer,
+.disabledBasicInfoContainer span {
+  color: var(--gray_400);
+}
