--- a/src/components/map/ObjectInfoPanel/OjbectPropertyContainer/AddPropertyPopUp.module.scss
+++ b/src/components/map/ObjectInfoPanel/OjbectPropertyContainer/AddPropertyPopUp.module.scss
@@ -23,5 +23,9 @@
   }
   &:disabled {
     color: var(--gray_50);
+    &:hover {
+      background: var(--white);
+      cursor: auto;
+    }
   }
 }
